--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-name: 'Mundana'
+name: 'TeslaOnline'
 description: 'Mundana is a free Jekyll theme for awesome people like you, Medium like.'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
@@ -20,10 +20,10 @@ plugins:
   
 authors:
     sal:
-      name:           Sal
-      site:           https://www.wowthemes.net
+      name:           Wojtek
+      site:           https://teslaonline.github.io
       avatar:         /assets/images/avatar1.jpg
-      bio:            "Hi, I am Sal, the author of Mundana, the theme you're currently previewing. I hope you like it!"
+      bio:            "Cześć! Mam na imię Wojtek i jestem pasjonatem nowych technologii. Na tej stronię piszę o Tesli i udostępniam porady oraz narzędzia przydatne obecnym i przyszłym posiadaczom samochodów tej marki."
       email:          wowthemesnet@gmail.com
       twitter:        https://twitter.com/wowthemesnet
 
