--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
-name: 'TeslaOnline'
-description: 'Mundana is a free Jekyll theme for awesome people like you, Medium like.'
+name: 'TESLAhub.pl'
+description: 'TESLA hub'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
 baseurl: '/'
@@ -27,13 +27,13 @@ authors:
       email:          wowthemesnet@gmail.com
       twitter:        https://twitter.com/wowthemesnet
 
-    jane:
-      name:           Jane
-      site:           https://www.wowthemes.net
-      avatar:         /assets/images/avatar2.jpg
-      bio:            "Blogger, fashionista, love to explore new ideas and write on my morning coffee!"
-      email:          fakemail@gmail.com
-      twitter:        https://twitter.com/wowthemesnet
+    # jane:
+    #   name:           Jane
+    #   site:           https://www.wowthemes.net
+    #   avatar:         /assets/images/avatar2.jpg
+    #   bio:            "Blogger, fashionista, love to explore new ideas and write on my morning coffee!"
+    #   email:          fakemail@gmail.com
+    #   twitter:        https://twitter.com/wowthemesnet
  
 # Defaults
 defaults:
