--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ authors:
     sal:
       name:           Wojtek
       site:           https://teslahub.pl
-      avatar:         /assets/images/avatar1.jpg
+      avatar:         /assets/images/avatar.png
       bio:            "Cześć! Mam na imię Wojtek i jestem pasjonatem nowych technologii. Na tej stronię piszę o Tesli i udostępniam porady oraz narzędzia przydatne obecnym i przyszłym posiadaczom samochodów tej marki."
       email:          kontakt@teslahub.pl
       # twitter:        https://twitter.com/wowthemesnet
