--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 name: 'TESLAhub.pl'
-description: 'TESLA hub'
+description: 'TESLA hub - centrum informacji o samochodach marki Tesla. Informacje o promocjach, przecenach i automatyczne powiadomienia o rabatach.'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
 baseurl: '/'
