--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 name: 'TESLAhub.pl'
-title: 'TESLA hub - centrum informacji o samochodach marki Tesla. Informacje o promocjach, przecenach i automatyczne powiadomienia o rabatach.'
+title: 'Informacje o promocjach, przecenach rabatcah. Automatyczne powiadomienia na e-mail.'
 description: 'Tesla hub'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
